--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="nes.css" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet"> -->
-    <title>disco8</title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <title>Disco8</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but disco8 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
